# ProjectCombinators

./: .gitignore  README.md
CombinatorAnimation/: CombinatorAnimation.cabal  README.md
CombinatorAnimation/Icons/: label1.xcf  label2.xcf  label_frame.xcf  label_solid.xcf  label_trans.xcf  label_trans_frame.xcf  label_trans_frame2.xcf  label_trans_frame3.xcf  label_trans_frame_many.xcf  label_trans_frame_selected.xcf  label_trans_frame_selected3.xcf
CombinatorAnimation/benchmarks/: ToshibaLinux_15_01_2012.html  XPS13_Ubuntu_13_04_2013.html  XPS15ZWindows_10_12_2012.html
CombinatorAnimation/src/: BenchOntoCigol.hs  BenchOntoCigol2D.hs  BenchOntoCigol3D.hs  CombinatorAnimation.hs  MainCombinatorAnimation.hs  MainCombinatorAnimation2D.hs  MainCombinatorAnimation3D.hs
Combinators/: Combinators.cabal  IKBCW-10000.csv  README.md  bench.html  testKS1000-1.csv
Combinators/benchmarks/: XPS13Ubuntu_13_04_2013.html  XPS15ZWindows_10_12_2012.html
Combinators/src/: BenchCigol.hs  BenchmarkCombinators.hs  Combinators.hs  MainBenchCombinators.hs  MainCombinators.hs  MainTestCombinators.hs  Variable.hs
Combinators/src/Combinators/: Basis.hs  BinaryTree.hs  CombGenerator.hs  CombGeneratorTest.hs  CombLambda.hs  CombLambdaTest.hs  Combinator.hs  CombinatorBasis.hs  CombinatorBasisTest.hs  CombinatorTest.hs  CombinatorTyped.hs  Lambda.hs  LambdaTest.hs  LambdaTyped.hs  LambdaTypedTest.hs  Language.hs  PrintingParsing.hs  Properties.hs  PropertiesTest.hs  Queries.hs  Reduction.hs  Term.hs  TypeInference.hs  Types.hs  TypesTest.hs  Variable.hs  VariableTests.hs
