name: Combinators
version: 0.5.0
cabal-version: >=1.2
build-type: Simple
license: GPL-2
license-file: LICENSE
copyright: All rights reserved, Jürgen Nicklisch-Franken
maintainer: Jürgen Nicklisch-Franken
stability: provisional
homepage: https://github.com/jutaro/cigolP
synopsis: Combinatory logic workbench
description: Combinatory logic and lambda calculus interpreter.
author: Jürgen Nicklisch-Franken
data-dir: ""
 
library
    build-depends: base >=4, parsec -any, pretty -any, QuickCheck -any,
                   HUnit -any, test-framework -any, test-framework-quickcheck2 -any,
                   test-framework-hunit -any, array -any, containers -any
    exposed-modules: Combinators
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Combinators.CombGeneratorTest
                   Combinators.CombGenerator Combinators.LambdaTest
                   Combinators.PropertiesTest Combinators.CombinatorBasisTest
                   Combinators.CombinatorTest Combinators.VariableTests
                   Combinators.Variable Combinators.Term Combinators.Combinator
                   Combinators.CombinatorBasis Combinators.Lambda
                   Combinators.Properties
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -rtsopts -threaded -fexcess-precision -funbox-strict-fields -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O2
 
executable combinators
    build-depends: base >=4, parsec -any, pretty -any, QuickCheck -any,
                   HUnit -any, test-framework -any, test-framework-quickcheck2 -any,
                   test-framework-hunit -any, array -any, containers -any
    main-is: MainCombinators.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Combinators.CombGeneratorTest
                   Combinators.CombGenerator Combinators.CombLambda
                   Combinators.LambdaTest Combinators.PropertiesTest
                   Combinators.CombinatorBasisTest Combinators.CombinatorTest
                   Combinators.VariableTests Combinators.Variable Combinators.Term
                   Combinators.Combinator Combinators.CombinatorBasis
                   Combinators.Lambda Combinators.Properties
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -rtsopts -threaded -fexcess-precision -funbox-strict-fields -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O2
 
executable bench-combinators
    build-depends: base -any, parsec -any, pretty -any,
                   QuickCheck -any, HUnit -any, test-framework -any,
                   test-framework-quickcheck2 -any, test-framework-hunit -any,
                   criterion -any, parallel -any, array -any, containers -any
    main-is: MainBenchCombinators.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Combinators.CombGeneratorTest
                   Combinators.CombGenerator Combinators.CombLambda
                   Combinators.LambdaTest Combinators.PropertiesTest
                   Combinators.CombinatorBasisTest Combinators.CombinatorTest
                   Combinators.VariableTests Combinators.Variable Combinators.Term
                   Combinators.Combinator Combinators.CombinatorBasis
                   Combinators.Lambda Combinators.Properties
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -rtsopts -threaded -fexcess-precision -funbox-strict-fields -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O3
 
test-suite test-combinators
    build-depends: base -any, parsec -any, pretty -any,
                   QuickCheck -any, HUnit -any, test-framework -any,
                   test-framework-quickcheck2 -any, test-framework-hunit -any,
                   array -any, containers -any
    type: exitcode-stdio-1.0
    main-is: MainTestCombinators.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Combinators.Variable Combinators.Term
                   Combinators.Combinator Combinators.CombinatorBasis
                   Combinators.Lambda Combinators.Properties
    ghc-prof-options: -auto-all -prof -caf-all
    ghc-options: -rtsopts -threaded -fexcess-precision -funbox-strict-fields -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O2
